<resources>
    <string name="app_name">NostalgiaMatching(FYP2024)</string>
    <!-- Gabriel -->
    <string name="Title">Nostalgia Matching</string>
    <string name="easy">Easy</string>
    <string name="medium">Normal</string>
    <string name="hard">Expert</string>
    <string name="instructions">How To Play</string>
    <!-- HaiXuan-->
    <string name="settings">Settings</string>
    <string name="lang">Language</string>
    <string name="langEN">English</string>
    <string name="langCN">中文</string>
    <string name="langIN">Bahasa</string>
    <string name="langTA">தமிழ்</string>
    <string name="homePage">Home Page</string>
    <string name="KYDZWeb">KYDZ Website</string>
    <string name="chooseTheme">Choose a theme</string>
    <string name="start">Start!</string>
    <string name="flask">Flask</string>
    <string name="laksa">Laksa</string>
    <string name="find">Find:</string>
    <string name="chooseDiff">Choose Difficulty</string>
    <string name="tryAgain">Try Again!</string>
    <string name="goodJob">Good Job!</string>
    <string name="back">Back</string>
    <string name="image_button_flask_description">Flask button</string>
    <string name="image_button_laksa_description">Laksa button</string>
    <!-- Cheng En-->
    <string name="htp1">How to play</string>
    <string name="htp2">Select a difficulty from the home page, 1* is the easiest, while 3* is the most advanced.</string>
    <string name="htp3">Select one of the eight themes available to start your game.</string>
    <string name="htp4">To complete the game, gather all the green ticks through the correct options.</string>
    <string name="htp5">A wrong option will be denoted by a red cross and its sound effects. Good luck and have fun!</string>
    <string name="cutlery">Cutlery</string>
    <string name="food">Food</string>
    <string name="animals">Animals</string>
    <string name="livingRoom">Living room</string>
    <string name="flower">Flower</string>
    <string name="scenery">Scenery</string>
    <string name="snacks">Snacks</string>
    <string name="householdItems">Household items</string>
    <!-- Jin Yan-->
    <string name="Armchair">Armchair</string>
    <string name="Bird_Cage">Bird Cage</string>
    <string name="Rose">Rose</string>
    <string name="Dog">Dog</string>
    <string name="Clogs">Clogs</string>
    <string name="Spoon">Spoon</string>
    <string name="Parrot">Parrot</string>
    <string name="DimSum">Dim Sum</string>
    <string name="Tingkat">Tingkat</string>
    <string name="Mahjong">Mahjong</string>
    <string name="Orchid">Orchid</string>
    <string name="Satay">Satay</string>
    <string name="GoldCoins">Gold Coins</string>
    <string name="WeddingBasket">Wedding Basket</string>
    <string name="Find3Cutlery">Find 3 Cutlery</string>
    <string name="Find3Food">Find 3 Food</string>
    <string name="Find3Living">Find 3 Living Room Items</string>
    <string name="Find3Flowers">Find 3 Flowers</string>
    <string name="Find3Scenery">Find 3 Sceneries</string>
    <string name="Find3Snacks">Find 3 Snacks</string>
    <string name="Find3Animals">Find 3 Animals</string>
    <string name="Find3item">Find 3 Items</string>




    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>