<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.15"
        android:background="#7F00FF" />

    <TextView
        android:id="@+id/htp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:text="@string/htp1"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/htp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:text="@string/htp2"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/htp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:text="@string/htp3"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/htp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:text="@string/htp4"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/htp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:text="@string/htp5"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/htpHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15"
        android:text="@string/htp6"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:background="#7F00FF" />

</LinearLayout>