<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:background="@color/bgPurple"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/lang"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLanguageEN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/langEN"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@null"
            android:background="@drawable/blackoutline_bg"/>

        <Button
            android:id="@+id/buttonLanguageCN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/langCN"
            android:textSize="28sp"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/blackoutline_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLanguageBA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/blackoutline_bg"
            android:text="@string/langIN"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/buttonLanguageTA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/blackoutline_bg"
            android:text="@string/langTA"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewQRcode"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/qr_code"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonHomePage"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/homePage"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/orange_btn"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonKYDZWeb"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/orange_btn"
        android:text="@string/KYDZWeb"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgPurple" />

</LinearLayout>
