<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_weight="0.05"
        android:background="@color/bgPurple"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Title"
        android:textSize="40sp"
        android:textStyle="bold" />
    <!-- Increased font size -->

    <!-- Button with one drawable -->
    <include layout="@layout/button_easy" />
    <include layout="@layout/button_normal" />
    <include layout="@layout/button_expert" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:background="@drawable/orange_btn"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:background="@drawable/orange_btn"
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.03"
        android:background="@color/bgPurple" />
</LinearLayout>
